# CleoDecompiler

./: .gitignore  .gitmodules  CMakeLists.txt  CleoDecompiler.cpp  CleoDecompiler.h  README.md  SRString.hpp
tests/: CMakeLists.txt  README.md
tests/Files for tests/: SASCM.INI  test.cs
tests/decompile/: CMakeLists.txt
tests/decompile/allOpcode/: CMakeLists.txt  main.cpp
tests/decompile/firstOpcode/: CMakeLists.txt  main.cpp
tests/opcodes/: CMakeLists.txt  main.cpp
